--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,10 @@
     <header>Max's redirector</header><br>
     <em> a URL shortener </em> <br>
 
+    <hr>
+
     <form action="#" id="url-form">
-      <label for="url_input">URL</label>
+      <label for="url_input">URL</label> <br>
       <input id="url-input" type="text">
       <input type="submit" value="submit">
     </form>
