add request for users to enter http:// with url

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
     <hr>
 
     <form action="#" id="url-form">
-      <label for="url_input">URL</label> <br>
+      <label for="url_input">URL (please include http://)</label> <br>
       <input id="url-input" type="text">
       <input type="submit" value="submit">
     </form>
